@@ -2809,6 +2809,7 @@
 		E0B930021226C0DD003FF67E /* ApplicationServices.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = E01E6A3D121EDCD3001A484F /* ApplicationServices.framework */; };
 		E0B930031226C0DD003FF67E /* libz.dylib in Frameworks */ = {isa = PBXBuildFile; fileRef = E0F9256D1224207200EF2362 /* libz.dylib */; };
 		E0B930101226C184003FF67E /* EaseActionsTest.m in Sources */ = {isa = PBXBuildFile; fileRef = E0B9300F1226C184003FF67E /* EaseActionsTest.m */; };
+		E0D2D560128CB06A00F78C63 /* piece.png in Resources */ = {isa = PBXBuildFile; fileRef = E0D2D55F128CB06A00F78C63 /* piece.png */; };
 /* End PBXBuildFile section */
 
 /* Begin PBXContainerItemProxy section */
@@ -3467,6 +3468,7 @@
 		E0B930071226C0DD003FF67E /* ActionEaseTest.app */ = {isa = PBXFileReference; explicitFileType = wrapper.application; includeInIndex = 0; path = ActionEaseTest.app; sourceTree = BUILT_PRODUCTS_DIR; };
 		E0B9300E1226C184003FF67E /* EaseActionsTest.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; name = EaseActionsTest.h; path = tests/EaseActionsTest.h; sourceTree = "<group>"; };
 		E0B9300F1226C184003FF67E /* EaseActionsTest.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; name = EaseActionsTest.m; path = tests/EaseActionsTest.m; sourceTree = "<group>"; };
+		E0D2D55F128CB06A00F78C63 /* piece.png */ = {isa = PBXFileReference; lastKnownFileType = image.png; path = piece.png; sourceTree = "<group>"; };
 		E0F9256D1224207200EF2362 /* libz.dylib */ = {isa = PBXFileReference; lastKnownFileType = "compiled.mach-o.dylib"; name = libz.dylib; path = usr/lib/libz.dylib; sourceTree = SDKROOT; };
 /* End PBXFileReference section */
 
@@ -4092,6 +4094,7 @@
 		E076E7B71225EDD000DE0DA2 /* Images */ = {
 			isa = PBXGroup;
 			children = (
+				E0D2D55F128CB06A00F78C63 /* piece.png */,
 				E076E7B81225EDD000DE0DA2 /* atlastest.png */,
 				E076E7B91225EDD000DE0DA2 /* b1.png */,
 				E076E7BA1225EDD000DE0DA2 /* b2.png */,
@@ -6022,6 +6025,7 @@
 				E076F20912268A9800DE0DA2 /* TileMaps in Resources */,
 				E076F20A12268A9800DE0DA2 /* zwoptex in Resources */,
 				E076F20B12268A9800DE0DA2 /* MainMenu.xib in Resources */,
+				E0D2D560128CB06A00F78C63 /* piece.png in Resources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
