@@ -7,6 +7,7 @@ version 0.99.5-rc1 - 12-Nov-2010
 . [FIX] Actions: OrbitCamera doesn't crash on Simulator
 . [FIX] CCArray: fastRemoveObjectAtIndex works as expected (issue #1024)
 . [FIX] CocosDenshion: Fixed possible loss of audio on iOS 4.2
+. [FIX] Configuration: removed main bundle from CCConfiguration (issue #839)
 . [FIX] Director: projection is doubled in RetinaDisplay mode
 . [FIX] DrawingPrimitives: don't modify the buffer in RetinaDisplay (issue #995)
 . [FIX] Menu: MenuItems can draw its children (issue #458)
